# embed_fwk

./: CMakeLists.txt  README.md
.github/workflows/: blank.yml  ci.yml
app1/: CMakeLists.txt
lib1/: CMakeLists.txt
